# aidamatic

./: .gitignore  .taiga_token.ide  .taiga_token.scrum  README.md  bootstrap_diagnostic.py  compass_artifact_wf-6f09132b-218f-42b6-9ba2-c8b8ee37b44e_text_markdown.md  comprehensive_diagnosis.sh  deep_nginx_diagnostic.sh  fix_backend_startup.sh  fix_gateway_routing.sh  host_side_diagnostic.sh  pyproject.toml  setup.sh
doc/: aida_v2.md  estimation_and_cycles.md  ide_integration.md  issues-tiaga.md  scrum_master_agent_intelligence.md  startup_taiga.md  taiga_gateway_auth_issue_update.md  taiga_setup.md
docker/: docker-compose.yml  env.example  nginx.conf  nginx_debug.conf
scripts/: aida_diagnostic.py  aida_start_diagnostic.py  aida_start_robust.py  debug_services.py  start_bridge_fixed.py  taiga-api.sh  taiga-auth.sh  taiga-clean.sh  taiga-down.sh  taiga-reset.sh  taiga-up.sh  taiga-wait.sh
scripts/tests/: auth_smoke.sh  test_bridge_direct.py  test_bridge_startup.py  test_networking_fix.py  test_taiga_api.py
src/aidamatic/: __init__.py  assignment.py
src/aidamatic/bridge/: app.py  cli.py
src/aidamatic/cli/: aida_restart.py  aida_setup.py  aida_stop.py  aida_uninstall.py  aidastart.py  bootstrap.py  bridge_restart.py  make_members.py  make_project.py  make_role.py  make_users.py  smoke_anthropic.py  taiga_sh.py
src/aidamatic/commands/: export_config.py  import_config.py  item_select.py  items_list.py  projects_list.py  setup_kanban.py  task_next.py  task_select.py
src/aidamatic/identity/: reconcile.py
src/aidamatic/schemas/: taiga-config.schema.json
src/aidamatic/sync/: outbox_worker.py
src/aidamatic/taiga/: client.py  models.py  pyclient.py
