[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aidamatic"
version = "0.1.0"
description = "AIDA - Scrum Master Agent orchestration for Taiga."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "semiuniversal" }
]
keywords = ["aida", "scrum", "taiga", "agent", "llm"]

dependencies = [
	"requests>=2.32.0",
	"pydantic>=2.8.0",
	"python-dotenv>=1.0.1",
	"anthropic>=0.30.0",
	"fastapi>=0.111.0",
	"uvicorn>=0.30.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aidamatic"]

[project.scripts]
aida-anthropic-smoke = "aidamatic.cli.smoke_anthropic:main"
aida-export = "aidamatic.commands.export_config:main"
aida-import = "aidamatic.commands.import_config:main"
aida-projects-list = "aidamatic.commands.projects_list:main"
aida-task-select = "aidamatic.commands.task_select:main"
aida-bridge = "aidamatic.bridge.cli:run_server"
aida-task-comment = "aidamatic.bridge.cli:post_comment"
aida-task-status = "aidamatic.bridge.cli:post_status"
