[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aidamatic"
version = "0.1.0"
description = "AIDA - Scrum Master Agent orchestration for Taiga."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "semiuniversal" }
]
keywords = ["aida", "scrum", "taiga", "agent", "llm"]

dependencies = [
	"requests>=2.32.0",
	"pydantic>=2.8.0",
	"python-dotenv>=1.0.1",
	"anthropic>=0.30.0",
	"fastapi>=0.111.0",
	"uvicorn>=0.30.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aidamatic"]

[project.scripts]
aida-anthropic-smoke = "aidamatic.cli.smoke_anthropic:main"
aida-export = "aidamatic.commands.export_config:main"
aida-import = "aidamatic.commands.import_config:main"
aida-projects-list = "aidamatic.commands.projects_list:main"
aida-task-select = "aidamatic.commands.task_select:main"
aida-items-list = "aidamatic.commands.items_list:main"
aida-item-select = "aidamatic.commands.item_select:main"
aida-setup-kanban = "aidamatic.commands.setup_kanban:main"
aida-bridge = "aidamatic.bridge.cli:run_server"
aida-task-comment = "aidamatic.bridge.cli:post_comment"
aida-task-status = "aidamatic.bridge.cli:post_status"
aida-sync = "aidamatic.bridge.cli:sync_outbox_cmd"
# Script wrappers (run from repo root in WSL/Linux/macOS)
aida-taiga-up = "aidamatic.cli.taiga_sh:taiga_up"
aida-taiga-down = "aidamatic.cli.taiga_sh:taiga_down"
aida-taiga-auth = "aidamatic.cli.taiga_sh:taiga_auth"
aida-taiga-api = "aidamatic.cli.taiga_sh:taiga_api"
aida-taiga-wait = "aidamatic.cli.taiga_sh:taiga_wait"
aida-taiga-clean = "aidamatic.cli.taiga_sh:taiga_clean"
aida-taiga-reset = "aidamatic.cli.taiga_sh:taiga_reset"
aida-start = "aidamatic.cli.aidastart:main"
aida-stop = "aidamatic.cli.aida_stop:main"
aida-restart = "aidamatic.cli.aida_restart:main"
aida-doc = "aidamatic.bridge.cli:doc_cmd"
aida-chat = "aidamatic.bridge.cli:chat_cmd"
aida-task-next = "aidamatic.commands.task_next:main"
