[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aidamatic"
version = "0.1.0"
description = "AIDA - Scrum Master Agent orchestration for Taiga."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "semiuniversal" }
]
keywords = ["aida", "scrum", "taiga", "agent", "llm"]

dependencies = [
	"requests>=2.32.0",
	"pydantic>=2.8.0",
	"python-dotenv>=1.0.1",
	"anthropic>=0.30.0",
	"fastapi>=0.111.0",
	"uvicorn>=0.30.0",
	"python-multipart>=0.0.9",
	"rich>=13.7.0",
	"python-taiga==0.8.6"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aidamatic"]

[project.scripts]
# Core
aida-bridge = "aidamatic.bridge.cli:run_server"
# Lifecycle
 aida-start = "aidamatic.cli.aidastart:main"
 aida-stop = "aidamatic.cli.aida_stop:main"
 aida-restart = "aidamatic.cli.aida_restart:main"
 aida-setup = "aidamatic.cli.aida_setup:main"
 aida-uninstall = "aidamatic.cli.aida_uninstall:main"
 aida-bootstrap = "aidamatic.cli.bootstrap:main"
